[gd_scene load_steps=5 format=2]

[ext_resource path="res://asset/Art/city layer 1.png" type="Texture" id=1]
[ext_resource path="res://src/level/StartScreen.gd" type="Script" id=2]
[ext_resource path="res://asset/Art/city layer 2.png" type="Texture" id=3]
[ext_resource path="res://asset/Art/city layer 3.png" type="Texture" id=4]

[node name="StartScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="StartMenu" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="StartMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -270.0
margin_right = 960.0
margin_bottom = 270.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
flip_v = true

[node name="TextureRect3" type="TextureRect" parent="StartMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -43.0
margin_right = 48.5
margin_bottom = 43.0

[node name="Label" type="Label" parent="StartMenu/VBoxContainer"]
margin_right = 97.0
margin_bottom = 14.0
text = "RUSS T. ROBOT"

[node name="StartButton" type="Button" parent="StartMenu/VBoxContainer"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 38.0
text = "Start"

[node name="SettingsButton" type="Button" parent="StartMenu/VBoxContainer"]
margin_top = 42.0
margin_right = 97.0
margin_bottom = 62.0
text = "Settings"

[node name="QuitButton" type="Button" parent="StartMenu/VBoxContainer"]
margin_top = 66.0
margin_right = 97.0
margin_bottom = 86.0
text = "Quit"

[node name="TextureRect2" type="TextureRect" parent="StartMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[connection signal="button_up" from="StartMenu/VBoxContainer/StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="button_up" from="StartMenu/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_button_up"]
[connection signal="button_up" from="StartMenu/VBoxContainer/QuitButton" to="." method="_on_QuitButton_button_up"]
